@@ -1054,3 +1054,6 @@
 
 5.2 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
+	* arch/arm/src/sam3u/sam3u_pio.c - Fix an address calculation error
+	  that caused ports B & C to get mapped to the PIOA base address.
+	  This is an important bugfix! (a patch is available)
